<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">
      <HorizontalScrollView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content">

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

<FrameLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <ImageButton
        android:layout_width="match_parent"
        android:layout_height="550dp"
        android:adjustViewBounds="true"

        android:contentDescription="image1"
        android:src="@drawable/pic1" />

    <TextView
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:fontFamily="@font/amaranth"
        android:text="@string/place_details"
        android:textColor="#FFFFFF"
        android:textSize="30sp"></TextView>
</FrameLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="550dp"
        android:layout_weight="1"
        android:adjustViewBounds="true"
        android:src="@drawable/pic1aa" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="550dp"
        android:layout_weight="1"
        android:adjustViewBounds="true"
        android:src="@drawable/pic1bb" />

</LinearLayout>
      </HorizontalScrollView>
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/bali"
          android:textColor="#050000"
          android:textSize="30sp"
          android:textStyle="bold" />
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

      <RatingBar
          style="@style/Widget.AppCompat.RatingBar.Indicator"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:numStars="5"
          android:progress="@android:integer/status_bar_notification_info_maxnum"
          android:progressTint="#FFEB3B" />

        <TextView
            android:id="@+id/id11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="47dp"
            android:text="@string/write_a_review"
            android:textAlignment="center"
            android:textSize="20sp" />
    </RelativeLayout>
<RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
      <ImageView
          android:layout_width="184dp"
          android:layout_height="55dp"
          android:src="@drawable/pic2a" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="1dp"
        android:text="@string/_49_people_reviewed_this"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="15sp"
        android:textStyle="bold" />

</RelativeLayout>

      <com.borjabravo.readmoretextview.ReadMoreTextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:fontFamily="@font/amaranth"
          android:text="@string/t1"
          android:textColor="#AD040000"
          android:textSize="18sp"
          app:colorClickableText="@android:color/holo_blue_bright"
          app:trimCollapsedText="READ MORE"
          app:trimExpandedText="READ LESS"
          app:trimLength="91"
          app:trimMode="trimModeLength" />


      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/pictures_n"
          android:textColor="#050000"
          android:textSize="28sp"
          android:textStyle="bold"
          tools:ignore="HardcodedText">

      </TextView>

      <LinearLayout
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:orientation="horizontal">

          <androidx.cardview.widget.CardView
              android:layout_width="184dp"
              android:layout_height="146dp"
              android:layout_marginStart="15dp"
              android:layout_marginLeft="15dp"
              android:layout_marginTop="15dp"
              android:layout_marginEnd="15dp"
              android:layout_marginRight="15dp"
              android:layout_marginBottom="15dp"
              android:clipToPadding="true"
              app:cardCornerRadius="15dp">

              <ImageView
                  android:layout_width="match_parent"
                  android:layout_height="202dp"
                  android:layout_gravity="start"
                  android:scaleType="fitXY"
                  android:src="@drawable/pic3a"
                  android:contentDescription="TODO" />
          </androidx.cardview.widget.CardView>
          <androidx.cardview.widget.CardView
              android:layout_width="184dp"
              android:layout_height="146dp"
              android:layout_marginStart="15dp"
              android:layout_marginLeft="15dp"
              android:layout_marginTop="15dp"
              android:layout_marginEnd="15dp"
              android:layout_marginRight="15dp"
              android:layout_marginBottom="15dp"
              android:clipToPadding="true"
              app:cardCornerRadius="15dp">

              <ImageView
                  android:layout_width="234dp"
                  android:layout_height="225dp"
                  android:scaleType="fitXY"

                  android:src="@drawable/pic5" />
          </androidx.cardview.widget.CardView>
      </LinearLayout>

          <androidx.cardview.widget.CardView
              android:layout_width="184dp"
              android:layout_height="146dp"
              android:layout_marginStart="15dp"
              android:layout_marginLeft="15dp"
              android:layout_marginTop="15dp"
              android:layout_marginEnd="15dp"
              android:layout_marginRight="15dp"
              android:layout_marginBottom="15dp"
              android:clipToPadding="true"
              app:cardCornerRadius="15dp">

              <ImageView
                  android:layout_width="match_parent"
                  android:layout_height="202dp"
                  android:scaleType="fitXY"
                  android:src="@drawable/pic4" />
          </androidx.cardview.widget.CardView>






















      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/places_like_bali_n"
          android:textColor="#050000"
          android:textSize="28sp"
          android:textStyle="bold" />
      <HorizontalScrollView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content">
          <LinearLayout
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:orientation="horizontal">
              <androidx.cardview.widget.CardView
                  android:layout_width="184dp"
                  android:layout_height="146dp"
                  android:layout_marginStart="15dp"
                  android:layout_marginLeft="15dp"
                  android:layout_marginTop="15dp"
                  android:layout_marginEnd="15dp"
                  android:layout_marginRight="15dp"
                  android:layout_marginBottom="15dp"
                  android:clipToPadding="true"
                  app:cardCornerRadius="15dp">

                  <ImageView
                      android:layout_width="205dp"
                      android:layout_height="143dp"
                      android:contentDescription="@string/_49_people_reviewed_this"
                      android:scaleType="fitXY"
                      android:src="@drawable/pic6" />
              </androidx.cardview.widget.CardView>
              <androidx.cardview.widget.CardView
                  android:layout_width="184dp"
                  android:layout_height="146dp"
                  android:layout_marginStart="15dp"
                  android:layout_marginLeft="15dp"
                  android:layout_marginTop="15dp"
                  android:layout_marginEnd="15dp"
                  android:layout_marginRight="15dp"
                  android:layout_marginBottom="15dp"
                  android:clipToPadding="true"
                  app:cardCornerRadius="15dp">

              <ImageView
                  android:layout_width="259dp"
                  android:layout_height="143dp"
                  android:scaleType="fitXY"
                  android:src="@drawable/pic7"
                  android:contentDescription="pic7"/>
              </androidx.cardview.widget.CardView>
              <androidx.cardview.widget.CardView
                  android:layout_width="184dp"
                  android:layout_height="146dp"
                  android:layout_marginStart="15dp"
                  android:layout_marginLeft="15dp"
                  android:layout_marginTop="15dp"
                  android:layout_marginEnd="15dp"
                  android:layout_marginRight="15dp"
                  android:layout_marginBottom="15dp"
                  android:clipToPadding="true"
                  app:cardCornerRadius="15dp">

              <ImageView
                  android:layout_width="273dp"
                  android:scaleType="fitXY"
                  android:layout_height="144dp"
                  android:src="@drawable/pic8" />
              </androidx.cardview.widget.CardView>
          </LinearLayout>
      </HorizontalScrollView>




  </LinearLayout>


</ScrollView>

